// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`array 1`] = `
Array [
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "arr",
    ],
    Array [
      4,
    ],
  ],
  Array [
    Array [
      "array",
      "splice",
    ],
    Array [
      "arr",
    ],
    Array [
      2,
      1,
      7,
      8,
      9,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "arr1",
      "0",
      "a",
    ],
    Array [
      0,
    ],
  ],
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "arr1",
    ],
    Array [
      Object {
        "a": 2,
      },
    ],
  ],
  Array [
    Array [
      "array",
      "splice",
    ],
    Array [
      "arr2",
    ],
    Array [
      3,
      4,
      "d",
    ],
  ],
  Array [
    Array [
      "array",
      "pop",
    ],
    Array [
      "arr3",
    ],
    Array [],
  ],
  Array [
    Array [
      "array",
      "unshift",
    ],
    Array [
      "arr4",
    ],
    Array [
      0,
    ],
  ],
  Array [
    Array [
      "array",
      "shift",
    ],
    Array [
      "arr5",
    ],
    Array [],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr6",
      "0",
    ],
    Array [
      "c",
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr6",
      "2",
    ],
    Array [
      "a",
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr7",
      "0",
    ],
    Array [
      1,
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr7",
      "1",
    ],
    Array [
      2,
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr7",
      "2",
    ],
    Array [
      3,
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr7",
      "3",
    ],
    Array [
      6,
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr8",
      "length",
    ],
    Array [
      0,
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr9",
      "10",
    ],
    Array [
      10,
    ],
  ],
  Array [
    Array [
      "object",
      "delete",
    ],
    Array [
      "arr10",
      "1",
    ],
    Array [],
  ],
]
`;

exports[`array 2`] = `
Array [
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "arr0",
    ],
    Array [
      Object {
        "bar": "str",
      },
    ],
  ],
  Array [
    Array [
      "array",
      "unshift",
    ],
    Array [
      "arr0",
    ],
    Array [
      Object {
        "bar": "str",
      },
    ],
  ],
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "arr2",
    ],
    Array [
      Array [
        "__MUTATIVE__",
        "arr1",
        "0",
      ],
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "arr2",
      "2",
      "bar",
    ],
    Array [
      "new str111",
    ],
  ],
  Array [
    Array [
      "array",
      "shift",
    ],
    Array [
      "arr1",
    ],
    Array [],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr3",
      "length",
    ],
    Array [
      1,
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr4",
      "length",
    ],
    Array [
      0,
    ],
  ],
  Array [
    Array [
      "array",
      "splice",
    ],
    Array [
      "arr2",
    ],
    Array [
      1,
      4,
    ],
  ],
]
`;

exports[`enablePatches and assign with ref array 1`] = `
Array [
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "arr0",
    ],
    Array [
      Array [
        "__MUTATIVE__",
        "a",
        "b",
      ],
    ],
  ],
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "arr0",
    ],
    Array [
      Array [
        "__MUTATIVE__",
        "arr1",
      ],
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "a",
      "b",
      "c",
    ],
    Array [
      2,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "a",
      "b",
      "c",
    ],
    Array [
      333,
    ],
  ],
  Array [
    Array [
      "object",
      "delete",
    ],
    Array [
      "a",
      "b",
    ],
    Array [],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "arr1",
      "0",
      "a",
    ],
    Array [
      222,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "arr0",
      "1",
      "a",
    ],
    Array [
      333,
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr0",
      "2",
      "a",
    ],
    Array [
      444,
    ],
  ],
]
`;

exports[`enablePatches and assign with ref object 1`] = `
Array [
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "x",
    ],
    Array [
      Array [
        "__MUTATIVE__",
        "a",
        "b",
      ],
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "x1",
    ],
    Array [
      Array [
        "__MUTATIVE__",
        "a",
        "b",
      ],
    ],
  ],
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "a",
      "arr",
    ],
    Array [
      1,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "a",
      "b",
      "c",
    ],
    Array [
      2,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "a",
      "b",
      "c",
    ],
    Array [
      333,
    ],
  ],
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "a",
      "arr",
    ],
    Array [
      2,
    ],
  ],
]
`;

exports[`enablePatches and assign/delete with ref object 1`] = `
Array [
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "x",
    ],
    Array [
      Array [
        "__MUTATIVE__",
        "a",
        "b",
      ],
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "x1",
    ],
    Array [
      Array [
        "__MUTATIVE__",
        "a",
        "b",
      ],
    ],
  ],
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "a",
      "arr",
    ],
    Array [
      1,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "a",
      "b",
      "c",
    ],
    Array [
      2,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "a",
      "b",
      "c",
    ],
    Array [
      333,
    ],
  ],
  Array [
    Array [
      "object",
      "delete",
    ],
    Array [
      "a",
      "b",
    ],
    Array [],
  ],
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "a",
      "arr",
    ],
    Array [
      2,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "x1",
      "c",
    ],
    Array [
      444,
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "a",
      "b",
    ],
    Array [
      Object {
        "f": 1,
      },
    ],
  ],
]
`;

exports[`map 1`] = `
Array [
  Array [
    Array [
      "map",
      "set",
    ],
    Array [
      "map",
      2,
    ],
    Array [
      "b",
      Object {
        "bar": "str",
      },
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "map",
      0,
      "bar",
    ],
    Array [
      "new str",
    ],
  ],
  Array [
    Array [
      "map",
      "clear",
    ],
    Array [
      "map1",
      -1,
    ],
    Array [],
  ],
  Array [
    Array [
      "map",
      "set",
    ],
    Array [
      "map3",
      0,
    ],
    Array [
      "a",
      Object {
        "bar": "str",
      },
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "map3",
      0,
      "bar",
    ],
    Array [
      "new str",
    ],
  ],
  Array [
    Array [
      "map",
      "delete",
    ],
    Array [
      "map2",
      1,
    ],
    Array [],
  ],
]
`;

exports[`object with delete 1`] = `
Array [
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "foobar",
      "baz",
    ],
    Array [
      "new str",
    ],
  ],
  Array [
    Array [
      "object",
      "delete",
    ],
    Array [
      "foobar",
    ],
    Array [],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "foobar",
      "baz",
    ],
    Array [
      "new str1",
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "foobar1",
    ],
    Array [
      Object {
        "baz": "new str1",
      },
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "foobar1",
      "baz",
    ],
    Array [
      "new str2",
    ],
  ],
]
`;

exports[`set 1`] = `
Array [
  Array [
    Array [
      "set",
      "add",
    ],
    Array [
      "set",
      3,
    ],
    Array [
      Object {
        "bar": "str",
      },
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "set",
      0,
      "bar",
    ],
    Array [
      "new str0",
    ],
  ],
  Array [
    Array [
      "set",
      "clear",
    ],
    Array [
      "set1",
      -1,
    ],
    Array [],
  ],
  Array [
    Array [
      "set",
      "add",
    ],
    Array [
      "set3",
      3,
    ],
    Array [
      Object {
        "bar": "new str0",
      },
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "set3",
      2,
      "bar",
    ],
    Array [
      "new str1",
    ],
  ],
  Array [
    Array [
      "set",
      "delete",
    ],
    Array [
      "set",
      0,
    ],
    Array [],
  ],
]
`;

exports[`simple array 1`] = `
Array [
  Array [
    Array [
      "array",
      "push",
    ],
    Array [
      "arr0",
    ],
    Array [
      Array [
        "__MUTATIVE__",
        "arr1",
      ],
    ],
  ],
  Array [
    Array [
      "array",
      "set",
    ],
    Array [
      "arr0",
      "1",
      "a",
    ],
    Array [
      2,
    ],
  ],
  Array [
    Array [
      "array",
      "pop",
    ],
    Array [
      "arr0",
    ],
    Array [],
  ],
]
`;

exports[`simple map 1`] = `
Array [
  Array [
    Array [
      "map",
      "set",
    ],
    Array [
      "map",
      2,
    ],
    Array [
      "b",
      Object {
        "bar": "str",
      },
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "map",
      0,
      "bar",
    ],
    Array [
      "new str",
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "map",
      0,
      "bar",
    ],
    Array [
      "new str",
    ],
  ],
]
`;

exports[`simple set 1`] = `
Array [
  Array [
    Array [
      "set",
      "add",
    ],
    Array [
      "set",
      3,
    ],
    Array [
      Object {
        "bar": "str1",
      },
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "set",
      0,
      "bar",
    ],
    Array [
      "new str0",
    ],
  ],
  Array [
    Array [
      "object",
      "set",
    ],
    Array [
      "set",
      1,
      "bar",
    ],
    Array [
      "new str1",
    ],
  ],
]
`;
